# DTIAtlasBuilder

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CTestConfig.cmake  ChangeHistory.h  DTIAtlasBuilder.cmake  DTIAtlasBuilder.cxx  DTIAtlasBuilder.qrc  DTIAtlasBuilder.xml  DTIAtlasBuilder.xml.in  DTIAtlasBuilderSoftConfig.txt.in  FindExternalTools.cmake  GUI.cxx  GUI.cxx.in  GUI.cxx~  GUI.h  GUI.h~  GUIsubclass.h~  GUIwindow.ui  README.md  ScriptWriter.cxx  ScriptWriter.cxx~  ScriptWriter.h  ScriptWriter.h~  SuperBuild.cmake  firstproject.xml~  main.cxx~  process.cxx~  process.h~
CMake/: ApplyAtlasWerksPatches.cmake  AtlasWerksLAPACK.patch.in  AtlasWerksPatchedFindFFTW.cmake  BRAINS.patch  BatchMake.patch  CMakeBRAINS3BuildMacros-Patched.cmake  CMakeLists-AtlasWerksLAPACK-Patched.txt.in  FindExternalTools.cmake  FindExternalTools.cmake~  InstallFFTW.cmake  InstallFFTW.cmake.in  InstallFFTWD.cmake.in  InstallFFTWF.cmake.in
Code/: CMakeLists.txt  DTIAtlasBuilder.cxx  GUI.cxx  GUI.h  GUIwindow.ui  ScriptWriter.cxx  ScriptWriter.h
Code/Testing/: CMakeLists.txt  CMakeLists.txt~  DTIAtlasBuilderGUITest.cxx  DTIAtlasBuilderGUITestLabels.cxx  DTIAtlasBuilderGUITestLabels.cxx~  DTIAtlasBuilderSoftConfig.txt.in  TestGUIparameters.csv  TestGUIparameters.txt  TestGUIparameters.txt.in
Data/Testing/: TestANTSFinalAtlasFA.nrrd  TestAffineAtlasFA.nrrd  TestBRAINSFinalAtlasFA.nrrd  TestDiffeomorphicAtlasFA.nrrd
SuperBuild/: FindExternalTools.cmake  InstallFFTW.cmake
Testing/: CMakeLists.txt  DTIAtlasBuilderGUITest.cxx  DTIAtlasBuilderGUITestLabels.cxx  DTIAtlasBuilderSoftConfig.txt.in  DTIAtlasBuilderTestITKv3.cxx  DTIAtlasBuilderTestITKv4.cxx  ReadMe.txt  TestGUIparameters.csv.in  TestGUIparameters.txt.in  TestGUIparametersANTS.txt.in  TestGUIparametersBRAINS.txt.in
